# legal-grag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
examples/: demo_pipeline.ipynb  kg_construction_example.py  langchain_orchestration_example.py  maypl_embedding_example.py  pdf_ingestion_example.py  pdf_kg_pipeline.py
explainability/: __init__.py  attribution.py  circuit_tracer.py  shap_wrapper.py  (+1 more)
my_kg_app/: .gitignore  README.md  pyproject.toml
my_kg_app/scripts/: run_pipeline.py  run_server.sh
my_kg_app/src/api/: __init__.py  dependencies.py  main.py  schemas.py
my_kg_app/src/config/: __init__.py
my_kg_app/src/explainability/: __init__.py  circuit_tracer.py  shap_wrapper.py
my_kg_app/src/graph_learning/: embedding.py  training.py
my_kg_app/src/graph_store/: __init__.py  client.py  repository.py
my_kg_app/src/ingestion/: loader.py  metadata.py  parser.py
my_kg_app/src/kg/: construction.py
my_kg_app/src/kg_builder/: __init__.py  builder.py  converter.py  schema.py
my_kg_app/src/kg_construction/: __init__.py  distiller.py  extractor.py  graph_builder.py
my_kg_app/src/kg_embedding/: __init__.py  cache.py  embedder_interface.py  fallback_embedder.py  maypl_wrapper.py  utils.py
my_kg_app/src/prompting/: base_prompt.py  chain_of_thought.py
my_kg_app/src/retrieval/: __init__.py  graph_to_context.py  integration.py  prompt_engineering.py  ranking.py  retriever.py
my_kg_app/src/retrieval_generation/: __init__.py
my_kg_app/src/serving/: session_manager.py
my_kg_app/src/utils/: __init__.py  helpers.py
my_kg_app/tests/: explainability_tests.py  ingestion_tests.py  retrieval_tests.py
(+98 files in other folders)
