[project]
name = "legal-grag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[mcp,torch]>=1.2.1",
    "itext2kg>=1.0.0",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "torchao>=0.14.1",
    "torchcodec>=0.9.0",
    "torchvision>=0.24.1",
]
