[project]
name = "legal-grag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "huggingface-hub[mcp,torch]>=1.2.1",
    "itext2kg>=1.0.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "matplotlib>=3.10.7",
    "neo4j-graphrag>=1.5.0",
    "neo4j-rust-ext>=5.28.2.1",
    "networkx>=3.6",
    "nltk>=3.9.2",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "torchao>=0.14.1",
    "torchcodec>=0.9.0",
    "torchvision>=0.24.1",
]
